Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -204,3 +204,15 @@ ENDIF.
 
 - `SM37` 에서 생성된 JOB 확인 가능
 <img width="458" height="328" alt="image" src="https://github.com/user-attachments/assets/81eb3a77-eb99-4185-aabb-f116a08e790b" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP Open SQL 핵심 문법 정리 >
