Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -214,3 +214,35 @@ ENDIF.
 </br>
 
 ## < ABAP Open SQL 핵심 문법 정리 >
+</br>
+
+### 1) CLIENT(MANDT) 지정 방식 – 구문법 vs 신문법
+- Open SQL에서 특정 클라이언트(MANDT)의 데이터를 직접 지정해 조회
+```abap
+*************** Open SQL CLIENT 지정 – 구문법 (형식) ****************
+SELECT <FIELDS>
+  INTO TABLE <ITAB>
+  FROM <DB_TABLE>
+  CLIENT SPECIFIED
+  WHERE mandt = <CLIENT>.
+
+
+*************** Open SQL CLIENT 지정 – 신문법 (형식) ****************
+SELECT <FIELDS>
+  INTO TABLE @<ITAB>
+  FROM <DB_TABLE>
+  USING CLIENT <CLIENT>.
+```
+```abap
+*************** Open SQL – CLIENT 지정 (구문법) ****************
+SELECT * INTO TABLE gt_scarr
+  FROM scarr
+  CLIENT SPECIFIED
+  WHERE mandt = '100'.   
+* WHERE MANDT BETWEEN '000' AND '900'.
+
+*************** Open SQL – CLIENT 지정 (신문법) ****************
+SELECT * INTO TABLE @gt_scarr
+  FROM scarr
+  USING CLIENT '000'.    
+```
