Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -246,3 +246,25 @@ SELECT * INTO TABLE @gt_scarr
   FROM scarr
   USING CLIENT '000'.    
 ```
+</br>
+</br>
+
+### 2) Open SQL INSERT 구문
+- 워크에어리어로 단건, 내부테이블로 여러 건 데이터를 DB에 저장
+- `ACCEPTING DUPLICATE KEYS` 를 사용하면 중복 키는 건너뛰고 나머지 데이터만 INSERT됨
+```abap
+*************** 단건 INSERT ****************
+INSERT INTO <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  VALUES <WORK_AREA>.        " 워크에어리어 1건 INSERT
+
+INSERT <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM <WORK_AREA>.          " VALUES와 동일 의미
+
+*************** 다중 INSERT ****************
+INSERT <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM TABLE <ITAB>
+  [ACCEPTING DUPLICATE KEYS]. " 내부테이블 여러 건 INSERT
+```
