Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -265,3 +265,23 @@ INSERT <DB_TABLE>
   FROM TABLE <ITAB>
   [ACCEPTING DUPLICATE KEYS]. " 내부테이블 여러 건 INSERT
 ```
+```abap
+DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
+      gs_scustom TYPE ZTSCUSTOM_B03.
+
+*************** 단건 INSERT ****************
+SELECT SINGLE *
+  FROM SCUSTOM
+  INTO gs_scustom
+  WHERE ID = 1.
+
+IF sy-subrc = 0.
+*  INSERT INTO ZTSCUSTOM_B03 VALUES gs_scustom.
+  INSERT ZTSCUSTOM_B03 FROM gs_scustom.
+  IF sy-subrc = 0.
+    WRITE: '성공'.
+  ELSE.
+    WRITE: '실패'.
+  ENDIF.
+ENDIF.
+```
