--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -266,8 +266,11 @@ INSERT <DB_TABLE>
   [ACCEPTING DUPLICATE KEYS]. " 내부테이블 여러 건 INSERT
 ```
 ```abap
+REPORT ZPROGB03_0033.
+
 DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
       gs_scustom TYPE ZTSCUSTOM_B03.
+DELETE FROM ZTSCUSTOM_B03.
 
 *************** 단건 INSERT ****************
 SELECT SINGLE *
@@ -275,13 +278,13 @@ SELECT SINGLE *
   INTO gs_scustom
   WHERE ID = 1.
 
-IF sy-subrc = 0.
-*  INSERT INTO ZTSCUSTOM_B03 VALUES gs_scustom.
-  INSERT ZTSCUSTOM_B03 FROM gs_scustom.
-  IF sy-subrc = 0.
-    WRITE: '성공'.
-  ELSE.
-    WRITE: '실패'.
-  ENDIF.
-ENDIF.
+INSERT INTO ZTSCUSTOM_B03 VALUES gs_scustom.
+INSERT ZTSCUSTOM_B03 FROM gs_scustom.
+
+*************** 다중 INSERT ****************
+SELECT * FROM scustom
+  INTO TABLE gt_scustom
+  WHERE ID BETWEEN 1 AND 50.
+
+INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 ```
