Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -270,7 +270,7 @@ REPORT ZPROGB03_0033.
 
 DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
       gs_scustom TYPE ZTSCUSTOM_B03.
-DELETE FROM ZTSCUSTOM_B03.
+* DELETE FROM ZTSCUSTOM_B03.
 
 *************** 단건 INSERT ****************
 SELECT SINGLE *
@@ -286,5 +286,6 @@ SELECT * FROM scustom
   INTO TABLE gt_scustom
   WHERE ID BETWEEN 1 AND 50.
 
-INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom.
+INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom
+  ACCEPTING DUPLICATE KEYS.
 ```
