Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -270,7 +270,7 @@ REPORT ZPROGB03_0033.
 
 DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
       gs_scustom TYPE ZTSCUSTOM_B03.
-* DELETE FROM ZTSCUSTOM_B03.
+* DELETE FROM ZTSCUSTOM_B03. => ACCEPTING DUPLICATE KEYS 안하면 써야함
 
 *************** 단건 INSERT ****************
 SELECT SINGLE *
