Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -249,6 +249,7 @@ SELECT * INTO TABLE @gt_scarr
 ### 2) Open SQL INSERT 구문
 - 워크에어리어로 단건, 내부테이블로 여러 건 데이터를 DB에 저장
 - `ACCEPTING DUPLICATE KEYS` 를 사용하면 중복 키는 건너뛰고 나머지 데이터만 INSERT됨
+- 중복 키 상태에서 INSERT를 실행하면 → 덤프 발생
 ```abap
 *************** 단건 INSERT ****************
 INSERT INTO <DB_TABLE>
