Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -290,3 +290,22 @@ SELECT * FROM scustom
 INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom
   ACCEPTING DUPLICATE KEYS.
 ```
+</br>
+</br>
+
+### 3) Open SQL UPDATE 구문
+- 워크에어리어 또는 조건(WHERE)을 기준으로 DB 데이터 수정
+- 대상 레코드가 없으면 수정되지 않음 (sy-dbcnt = 0)
+```abap
+*************** 단건 UPDATE (Work Area) ****************
+UPDATE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM <WORK_AREA>.          " PK 기준 1건 수정
+
+*************** 단건 UPDATE (SET / WHERE) ****************
+UPDATE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  SET <FIELD1> = <VALUE1>,
+      <FIELD2> = <VALUE2>
+  WHERE <FULL_QUALIFIED_KEY>. " 조건에 맞는 필드만 수정
+```
