Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -294,8 +294,8 @@ INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom
 </br>
 
 ### 3) Open SQL UPDATE 구문
-- 워크에어리어 또는 조건(WHERE)을 기준으로 DB 데이터 수정
-- 대상 레코드가 없으면 수정되지 않음 (sy-dbcnt = 0)
+- 기존 DB 레코드를 PK 기준으로 1건 수정하거나, 조건(WHERE)에 맞는 여러 건을 한 번에 수정할 수 있음
+- 수정된 레코드 수는 **sy-dbcnt**로 확인 가능 (0이면 대상 없음)
 ```abap
 *************** 단건 UPDATE (Work Area) ****************
 UPDATE <DB_TABLE>
@@ -308,4 +308,16 @@ UPDATE <DB_TABLE>
   SET <FIELD1> = <VALUE1>,
       <FIELD2> = <VALUE2>
   WHERE <FULL_QUALIFIED_KEY>. " 조건에 맞는 필드만 수정
+
+*************** 다중 UPDATE (Internal Table 방식) ****************
+UPDATE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM TABLE <ITAB>.          " 내부테이블 기준 여러 건 수정
+
+*************** 다중 UPDATE (SET / WHERE 방식) ****************
+UPDATE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  SET <FIELD1> = <VALUE1>,
+      <FIELD2> = <VALUE2>
+  WHERE <CONDITION>.          " 조건에 맞는 여러 건 수정
 ```
