Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -295,7 +295,7 @@ INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom
 
 ### 3) Open SQL UPDATE 구문
 - 기존 DB 레코드를 PK 기준으로 1건 수정하거나, 조건(WHERE)에 맞는 여러 건을 한 번에 수정할 수 있음
-- 수정된 레코드 수는 **sy-dbcnt**로 확인 가능 (0이면 대상 없음)
+- 수정된 레코드 수는 **`sy-dbcnt`** 로 확인 가능 (0이면 대상 없음)
 ```abap
 *************** 단건 UPDATE (Work Area) ****************
 UPDATE <DB_TABLE>
