Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -321,3 +321,22 @@ UPDATE <DB_TABLE>
       <FIELD2> = <VALUE2>
   WHERE <CONDITION>.          " 조건에 맞는 여러 건 수정
 ```
+```abap
+REPORT ZPROGB03_0033.
+
+DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
+      gs_scustom TYPE ZTSCUSTOM_B03.
+
+*************** 단건 UPDATE (Work Area) ****************
+gs_scustom-id = 1.
+gs_scustom-name = 'change name'.
+UPDATE ZTSCUSTOM_B03 FROM gs_scustom.
+
+*************** 단건 UPDATE (SET / WHERE) ****************
+gs_scustom-id = 2.
+gs_scustom-name = 'second change'.
+UPDATE ZTSCUSTOM_B03
+   SET name = gs_scustom-name
+       street = 'hihi'
+   WHERE ID = gs_scustom-id.
+```
