Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -324,9 +324,6 @@ UPDATE <DB_TABLE>
 ```abap
 REPORT ZPROGB03_0033.
 
-DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
-      gs_scustom TYPE ZTSCUSTOM_B03.
-
 *************** 단건 UPDATE (Work Area) ****************
 gs_scustom-id = 1.
 gs_scustom-name = 'change name'.
@@ -339,4 +336,10 @@ UPDATE ZTSCUSTOM_B03
    SET name = gs_scustom-name
        street = 'hihi'
    WHERE ID = gs_scustom-id.
+
+*************** 다중 UPDATE (SET / WHERE 방식) ****************
+gs_scustom-name = '여러건 변경하기!'.
+UPDATE ZTSCUSTOM_B03
+  SET name = gs_scustom-name
+  WHERE id BETWEEN 1 AND 20.
 ```
