Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -5,8 +5,7 @@
 - **2) SAP Job(백그라운드 잡) - SM36, SM37**
 </br>
 
-- **C01에서 더블클릭 이벤트 발생해도 자동으로 PAI/PBO 안 탐**
-- **더블클릭 이후 로직은 기본적으로 C01에서만 처리**
+- **UPDATE는 기존 레코드만 수정하고, MODIFY는 있으면 수정·없으면 INSERT까지 수행**
 </br>
 </br>
 
@@ -296,6 +295,7 @@ INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom
 ### 3) Open SQL UPDATE 구문
 - 기존 DB 레코드를 PK 기준으로 1건 수정하거나, 조건(WHERE)에 맞는 여러 건을 한 번에 수정할 수 있음
 - 수정된 레코드 수는 **`sy-dbcnt`** 로 확인 가능 (0이면 대상 없음)
+- UPDATE는 기존 레코드만 수정하고, MODIFY는 있으면 수정·없으면 INSERT까지 수행
 ```abap
 *************** 단건 UPDATE (Work Area) ****************
 UPDATE <DB_TABLE>
