Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -5,7 +5,7 @@
 - **2) SAP Job(백그라운드 잡) - SM36, SM37**
 </br>
 
-- **UPDATE는 기존 레코드만 수정하고, MODIFY는 있으면 수정·없으면 INSERT까지 수행**
+- **`UPDATE` 는 기존 레코드만 수정하고, `MODIFY` 는 있으면 수정·없으면 INSERT까지 수행**
 </br>
 </br>
 
