Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -337,6 +337,9 @@ UPDATE ZTSCUSTOM_B03
        street = 'hihi'
    WHERE ID = gs_scustom-id.
 
+*************** 다중 UPDATE (Internal Table 방식) ****************
+UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
+
 *************** 다중 UPDATE (SET / WHERE 방식) ****************
 gs_scustom-name = '여러건 변경하기!'.
 UPDATE ZTSCUSTOM_B03
