Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -302,24 +302,17 @@ UPDATE <DB_TABLE>
   [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
   FROM <WORK_AREA>.          " PK 기준 1건 수정
 
-*************** 단건 UPDATE (SET / WHERE) ****************
+*************** 단건 / 다중 UPDATE (SET / WHERE) ****************
 UPDATE <DB_TABLE>
   [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
   SET <FIELD1> = <VALUE1>,
       <FIELD2> = <VALUE2>
-  WHERE <FULL_QUALIFIED_KEY>. " 조건에 맞는 필드만 수정
+  WHERE <FULL_QUALIFIED_KEY>. " 조건에 맞는 필드만 단건/다중 수정
 
 *************** 다중 UPDATE (Internal Table 방식) ****************
 UPDATE <DB_TABLE>
   [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
   FROM TABLE <ITAB>.          " 내부테이블 기준 여러 건 수정
-
-*************** 다중 UPDATE (SET / WHERE 방식) ****************
-UPDATE <DB_TABLE>
-  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
-  SET <FIELD1> = <VALUE1>,
-      <FIELD2> = <VALUE2>
-  WHERE <CONDITION>.          " 조건에 맞는 여러 건 수정
 ```
 ```abap
 REPORT ZPROGB03_0033.
@@ -329,7 +322,7 @@ gs_scustom-id = 1.
 gs_scustom-name = 'change name'.
 UPDATE ZTSCUSTOM_B03 FROM gs_scustom.
 
-*************** 단건 UPDATE (SET / WHERE) ****************
+*************** 단건 / 다중 UPDATE (SET / WHERE) ****************
 gs_scustom-id = 2.
 gs_scustom-name = 'second change'.
 UPDATE ZTSCUSTOM_B03
@@ -337,12 +330,11 @@ UPDATE ZTSCUSTOM_B03
        street = 'hihi'
    WHERE ID = gs_scustom-id.
 
-*************** 다중 UPDATE (Internal Table 방식) ****************
-UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
-
-*************** 다중 UPDATE (SET / WHERE 방식) ****************
 gs_scustom-name = '여러건 변경하기!'.
 UPDATE ZTSCUSTOM_B03
   SET name = gs_scustom-name
   WHERE id BETWEEN 1 AND 20.
+
+*************** 다중 UPDATE (Internal Table 방식) ****************
+UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 ```
