Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -324,16 +324,17 @@ UPDATE ZTSCUSTOM_B03 FROM gs_scustom.
 
 *************** 단건 / 다중 UPDATE (SET / WHERE) ****************
 gs_scustom-id = 2.
-gs_scustom-name = 'second change'.
+gs_scustom-name = 'second change'.      " 단건 변경
 UPDATE ZTSCUSTOM_B03
    SET name = gs_scustom-name
        street = 'hihi'
    WHERE ID = gs_scustom-id.
 
-gs_scustom-name = '여러건 변경하기!'.
 UPDATE ZTSCUSTOM_B03
-  SET name = gs_scustom-name
-  WHERE id BETWEEN 1 AND 20.
+  SET form = 'My form'                  " 여러건 변경
+      city = 'Walldorf'
+      country = 'DE'
+  WHERE id BETWEEN 10 AND 20.
 
 *************** 다중 UPDATE (Internal Table 방식) ****************
 UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
