Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -3,6 +3,9 @@
 
 - **1) BDC (Batch Data Creation)**
 - **2) SAP Job(백그라운드 잡) - SM36, SM37**
+- **3) CLIENT(MANDT) 지정 방식 – 구문법 vs 신문법**
+- **4)  Open SQL INSERT 구문**
+- **5) Open SQL UPDATE 구문**
 </br>
 
 - **`UPDATE` 는 기존 레코드만 수정하고, `MODIFY` 는 있으면 수정·없으면 INSERT까지 수행**
