Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -341,14 +341,13 @@ UPDATE ZTSCUSTOM_B03
 
 *************** 다중 UPDATE (Internal Table 방식) ****************
 SELECT * FROM scustom
-  INTO TABLE gt_scustom.
+  INTO TABLE gt_scustom
+  WHERE id BETWEEN 10 AND 20.
 
 LOOP AT gt_scustom INTO gs_scustom.
-  IF gs_scustom-id BETWEEN 10 AND 20.
-    gs_scustom-form = 'My form'.
-    gs_scustom-city = 'Walldorf'.
-    gs_scustom-country = 'DE'.
-  ENDIF.
+  gs_scustom-form = 'My form'.
+  gs_scustom-city = 'Walldorf'.
+  gs_scustom-country = 'DE'.
   MODIFY gt_scustom FROM gs_scustom.
 ENDLOOP.
 UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
