Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -275,7 +275,7 @@ DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
       gs_scustom TYPE ZTSCUSTOM_B03.
 * DELETE FROM ZTSCUSTOM_B03. => ACCEPTING DUPLICATE KEYS 안하면 써야함
 
-*************** 단건 INSERT ****************
+*************** 단건 INSERT (Work Area) ****************
 SELECT SINGLE *
   FROM SCUSTOM
   INTO gs_scustom
@@ -284,7 +284,7 @@ SELECT SINGLE *
 INSERT INTO ZTSCUSTOM_B03 VALUES gs_scustom.
 INSERT ZTSCUSTOM_B03 FROM gs_scustom.
 
-*************** 다중 INSERT ****************
+*************** 다중 INSERT (Internal Table) ****************
 SELECT * FROM scustom
   INTO TABLE gt_scustom
   WHERE ID BETWEEN 1 AND 50.
@@ -351,4 +351,21 @@ LOOP AT gt_scustom INTO gs_scustom.
   MODIFY gt_scustom FROM gs_scustom.
 ENDLOOP.
 UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
+```
+</br>
+</br>
+
+4) Open SQL MODIFY 구문
+- PK 기준으로 데이터가 있으면 UPDATE, 없으면 INSERT 수행
+- 처리 결과는 sy-dbcnt로 영향 받은 건수 확인
+```abap
+*************** 단건 MODIFY (Work Area) ****************
+MODIFY <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM <WORK_AREA>.          " 있으면 UPDATE, 없으면 INSERT
+
+*************** 다중 MODIFY (Internal Table 방식) ****************
+MODIFY <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM TABLE <ITAB>.          " 여러 건 UPSERT 처리
 ```
