Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -358,6 +358,7 @@ UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 ### 4) Open SQL MODIFY 구문
 - PK 기준으로 데이터가 있으면 UPDATE, 없으면 INSERT 수행
 - 처리 결과는 sy-dbcnt로 영향 받은 건수 확인
+- `APPENDING TABLE` : 기존 내부테이블을 비우지 않고 SELECT 결과를 뒤에 계속 추가하는 방식
 ```abap
 *************** 단건 MODIFY (Work Area) ****************
 MODIFY <DB_TABLE>
@@ -368,4 +369,23 @@ MODIFY <DB_TABLE>
 MODIFY <DB_TABLE>
   [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
   FROM TABLE <ITAB>.          " 여러 건 UPSERT 처리
+```
+```abap
+*************** 단건 MODIFY (Work Area) ****************
+gs_scustom-id = 500.
+gs_scustom-form = '변경~~'.
+gs_scustom-name = 'MODIFY 변경~~'.
+MODIFY ZTSCUSTOM_B03 FROM gs_scustom.
+
+*************** 다중 MODIFY (Internal Table 방식) ****************
+gs_scustom-name = 'modify name'.
+MODIFY gt_scustom FROM gs_scustom
+TRANSPORTING name WHERE id <> space.
+
+SELECT *
+  APPENDING TABLE gt_scustom
+  FROM scustom
+  WHERE ID IN ( 193, 195, 197 ).
+" 완성된 itab을 db tab에 modify
+MODIFY ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 ```
