--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -389,3 +389,21 @@ SELECT *
 " 완성된 itab을 db tab에 modify
 MODIFY ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 ```
+</br>
+</br>
+
+### 5) Open SQL DELETE 구문
+- PK 기준으로 단건 삭제하거나 조건(WHERE)에 맞는 여러 건 삭제 가능
+- 삭제된 레코드 수는 `sy-dbcnt` 로 확인
+- 조건이 맞는 데이터가 없으면 아무 것도 삭제되지 않음
+```abap
+*************** 단건 DELETE (Work Area) ****************
+DELETE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM <WORK_AREA>.          " PK 기준 1건 삭제
+
+*************** 단건 / 다중 DELETE (WHERE) ****************
+DELETE FROM <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  WHERE <FULL_QUALIFIED_KEY>. " 조건에 맞는 단건/다중 삭제
+```
