Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -357,7 +357,7 @@ UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 
 ### 4) Open SQL MODIFY 구문
 - PK 기준으로 데이터가 있으면 UPDATE, 없으면 INSERT 수행
-- 처리 결과는 sy-dbcnt로 영향 받은 건수 확인
+- 처리 결과는 `sy-dbcnt` 로 영향 받은 건수 확인
 - `APPENDING TABLE` : 기존 내부테이블을 비우지 않고 SELECT 결과를 뒤에 계속 추가하는 방식
 ```abap
 *************** 단건 MODIFY (Work Area) ****************
