Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -252,6 +252,7 @@ SELECT * INTO TABLE @gt_scarr
 - 워크에어리어로 단건, 내부테이블로 여러 건 데이터를 DB에 저장
 - `ACCEPTING DUPLICATE KEYS` 를 사용하면 중복 키는 건너뛰고 나머지 데이터만 INSERT됨
 - 중복 키 상태에서 INSERT를 실행하면 → 덤프 발생
+- **`sy-dbcnt`** 로 실제 INSERT된 결과를 확인
 ```abap
 *************** 단건 INSERT ****************
 INSERT INTO <DB_TABLE>
@@ -357,7 +358,7 @@ UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 
 ### 4) Open SQL MODIFY 구문
 - PK 기준으로 데이터가 있으면 UPDATE, 없으면 INSERT 수행
-- 처리 결과는 `sy-dbcnt` 로 영향 받은 건수 확인
+- **`sy-dbcnt`** 로 실제 반영된 수정 결과를 확인
 - `APPENDING TABLE` : 기존 내부테이블을 비우지 않고 SELECT 결과를 뒤에 계속 추가하는 방식
 ```abap
 *************** 단건 MODIFY (Work Area) ****************
@@ -394,7 +395,7 @@ MODIFY ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 
 ### 5) Open SQL DELETE 구문
 - PK 기준으로 단건 삭제하거나 조건(WHERE)에 맞는 여러 건 삭제 가능
-- 삭제된 레코드 수는 `sy-dbcnt` 로 확인
+- 삭제된 레코드 수는 **`sy-dbcnt`** 로 확인
 - 조건이 맞는 데이터가 없으면 아무 것도 삭제되지 않음
 ```abap
 *************** 단건 DELETE (Work Area) ****************
