Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -407,4 +407,25 @@ DELETE <DB_TABLE>
 DELETE FROM <DB_TABLE>
   [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
   WHERE <FULL_QUALIFIED_KEY>. " 조건에 맞는 단건/다중 삭제
+
+*************** 다중 DELETE (Internal Table 방식) ****************
+DELETE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM TABLE <ITAB>.          " 내부테이블의 PK 기준으로 여러 건 삭제
+```
+```abap
+*************** 단건 DELETE (Work Area) ****************
+gs_scustom-id = 1.
+DELETE ZTSCUSTOM_B03 FROM gs_scustom.
+
+*************** 단건 / 다중 DELETE (WHERE) ****************
+DELETE FROM ZTSCUSTOM_B03 WHERE ID = 2.
+
+*************** 다중 DELETE (Internal Table 방식) ****************
+" DELETE FROM ZTSCUSTOM_B03 " (주의) 전체 삭제
+
+SELECT * FROM ZTSCUSTOM_B03
+  INTO TABLE gt_scustom
+  WHERE ID <= 50.
+DELETE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 ```
