--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -415,10 +415,10 @@ gs_scustom-id = 1.
 DELETE ZTSCUSTOM_B03 FROM gs_scustom.
 
 *************** 단건 / 다중 DELETE (WHERE) ****************
-DELETE FROM ZTSCUSTOM_B03 WHERE ID = 2.
+DELETE FROM ZTSCUSTOM_B03 WHERE ID = 2.    " 단건 삭제
 
 DELETE FROM ZTSCUSTOM_B03
-  WHERE ID BETWEEN 55 AND 60.
+  WHERE ID BETWEEN 55 AND 60.              " 여러건 삭제
 
 *************** 다중 DELETE (Internal Table 방식) ****************
 " DELETE FROM ZTSCUSTOM_B03 " (주의) 전체 삭제
