Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -197,6 +197,7 @@ ENDIF.
 </br>
 
 - JOB 시작 조건을 주기적 실행으로 설정해 20분마다 백그라운드 JOB을 자동 실행하도록 설정
+- `No Start After` : 종료일이 아님. 시작일의 유효기간. 종료일은 빈칸으로 둬야 함.
 <img width="459" height="369" alt="image" src="https://github.com/user-attachments/assets/da67cc6f-53a4-4032-9a56-7644a4695deb" />
 </br>
 </br>
