Update 3-1. 프로그래밍 DB 활용 개발(01.07).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -2,3 +2,5 @@
 </br>
 
 ### 실습 1
+
+<img width="1818" height="816" alt="image" src="https://github.com/user-attachments/assets/23b40dae-ddf3-4d91-9beb-f01b282465ec" />
