Update 3-1. 프로그래밍 DB 활용 개발(01.07).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -16,3 +16,7 @@
 </br>
 
 ### 실습 2
+</br>
+
+- 문제
+<img width="716" height="327" alt="image" src="https://github.com/user-attachments/assets/527d8756-1d3b-46e1-bbc2-0c2a6c33a37b" />
