Update 3-1. 프로그래밍 DB 활용 개발(01.07).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -1,3 +1,4 @@
+-**서브스크린 생성시 LAYOUT에 서브스크린 지정 필수**
 ## < 실습 코드 >
 </br>
 
@@ -10,7 +11,46 @@
 </br>
 </br>
 
-**1) Report program 코
+**1) Report program 코드 생성**
+```abap
+REPORT ZBC400_PRACTICE1_B03.
+
+INCLUDE ZBC400_PRACTICE1_B03_TOP.
+INCLUDE ZBC400_PRACTICE1_B03_C01.
+INCLUDE ZBC400_PRACTICE1_B03_O01.
+INCLUDE ZBC400_PRACTICE1_B03_I01.
+INCLUDE ZBC400_PRACTICE1_B03_F01.
+
+START-OF-SELECTION.
+PERFORM set_data.
+CALL SCREEN 100.
+```
+</br>
+
+**2) `TOP` 모듈 생성**
+- 서브스크린 생성시 LAYOUT에 서브스크린 지정 필수
+```abap
+DATA: OK_CODE TYPE sy-ucomm.
+
+DATA: go_docking TYPE REF TO cl_gui_docking_container,
+      go_alv TYPE REF TO cl_gui_alv_grid.
+
+DATA: gs_data TYPE ZTMYCARRIER_B03,
+      gt_data TYPE TABLE OF ZTMYCARRIER_B03,
+      gt_sflight TYPE TABLE OF ZREADSFLIGHT_B03.
+
+DATA gs_layout TYPE lvc_s_layo.
+
+SELECTION-SCREEN BEGIN OF SCREEN 110 AS SUBSCREEN.
+  PARAMETERS: pa_car TYPE ZTMYCARRIER_B03-carrid,
+              pa_con TYPE ZTMYCARRIER_B03-connid,
+              pa_name TYPE ZTMYCARRIER_B03-carrname,
+              pa_cityf TYPE ZTMYCARRIER_B03-cityfrom,
+              pa_airpf TYPE ZTMYCARRIER_B03-airpfrom,
+              pa_cityt TYPE ZTMYCARRIER_B03-cityto,
+              pa_airpt TYPE ZTMYCARRIER_B03-airpto.
+SELECTION-SCREEN END OF SCREEN 110.
+```
 </br>
 </br>
 </br>
