--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -62,6 +62,260 @@ SELECTION-SCREEN BEGIN OF SCREEN 110 AS SUBSCREEN.
 SELECTION-SCREEN END OF SCREEN 110.
 ```
 </br>
+
+**2) `C01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_B03_C01
+*&---------------------------------------------------------------------*
+
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+  CLASS-METHODS: on_toolbar FOR EVENT toolbar
+    OF cl_gui_alv_grid IMPORTING e_object,
+      on_user_command FOR EVENT user_command
+    OF cl_gui_alv_grid IMPORTING e_ucomm.
+  CLASS-METHODS: on_double_click FOR EVENT double_click
+    OF cl_gui_alv_grid IMPORTING ES_ROW_NO.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_toolbar.
+    DATA ls_button TYPE STB_BUTTON.
+    ls_button-butn_type = 3.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'INSERT'.
+    ls_button-icon = ICON_EXPAND.
+    ls_button-butn_type = 0.
+    ls_button-text = 'INSERT'.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'UPDATE'.
+    ls_button-icon = ICON_INTENSIFY.
+    ls_button-butn_type = 0.
+    ls_button-text = 'UPDATE'.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'DELETE'.
+    ls_button-icon = ICON_COLLAPSE.
+    ls_button-butn_type = 0.
+    ls_button-text = 'DELETE'.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+  ENDMETHOD.
+
+  METHOD ON_USER_COMMAND.
+    CASE E_UCOMM.
+      WHEN 'INSERT'.
+        PERFORM insert_data.
+      WHEN 'UPDATE'.
+        PERFORM update_data.
+      WHEN 'DELETE'.
+        DATA: lt_select_data TYPE LVC_T_ROW,
+              ls_select_data TYPE LVC_S_ROW.
+
+        CALL METHOD go_alv->get_selected_rows
+          IMPORTING
+            et_index_rows = lt_select_data.
+
+        PERFORM delete_data USING lt_select_data ls_select_data.
+      WHEN OTHERS.
+    ENDCASE.
+    PERFORM refresh_data.
+  ENDMETHOD.
+
+  METHOD on_double_click.
+    CLEAR: gs_data, gt_sflight.
+    READ TABLE gt_data INTO gs_data INDEX es_row_no-row_id.
+    SELECT * FROM sflight
+      INTO TABLE gt_sflight
+      WHERE carrid = gs_data-carrid
+        AND connid = gs_data-connid.
+
+    DATA: gv_car TYPE sflight-carrid,
+          gv_con TYPE sflight-connid.
+    gv_car = gs_data-carrid.
+    gv_con = gs_data-connid.
+    SET PARAMETER ID 'CARID' FIELD gv_car.
+    SET PARAMETER ID 'CONID' FIELD gv_con.
+
+    IF sy-subrc = 0.
+      LEAVE TO TRANSACTION 'ZTPRACTICE1_CALLED'
+      AND SKIP FIRST SCREEN.
+    ELSE.
+      MESSAGE '해당하는 sflight 정보가 없습니다.' TYPE 'E'.
+    ENDIF.
+  ENDMETHOD.
+ENDCLASS.
+```
+</br>
+
+**3) `F01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_B03_F01
+*&---------------------------------------------------------------------*
+
+FORM insert_data .
+  CLEAR gs_data.
+  gs_data-carrid = pa_car.
+  gs_data-connid = pa_con.
+  gs_data-carrname = pa_name.
+  gs_data-cityfrom = pa_cityf.
+  gs_data-airpfrom = pa_airpf.
+  gs_data-cityto = pa_cityt.
+  gs_data-airpto = pa_airpt.
+  gs_data-ernam = sy-uname.
+  gs_data-erdat = sy-datum.
+  gs_data-erzet = sy-uzeit.
+
+  INSERT ZTMYCARRIER_B03 FROM gs_data.
+  IF sy-subrc = 0.
+    PERFORM set_data.
+  ELSE.
+    MESSAGE 'INSERT 실패' TYPE 'E'.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM update_data .
+  CLEAR gs_data.
+  SELECT SINGLE * FROM ZTMYCARRIER_B03
+    INTO gs_data WHERE carrid = pa_car.
+  gs_data-carrid = pa_car.
+  gs_data-connid = pa_con.
+  gs_data-carrname = pa_name.
+  gs_data-cityfrom = pa_cityf.
+  gs_data-airpfrom = pa_airpf.
+  gs_data-cityto = pa_cityt.
+  gs_data-airpto = pa_airpt.
+  gs_data-aenam = sy-uname.
+  gs_data-aedat = sy-datum.
+  gs_data-aezet = sy-uzeit.
+
+  UPDATE ZTMYCARRIER_B03 FROM gs_data.
+  IF sy-subrc = 0.
+    PERFORM set_data.
+  ELSE.
+    MESSAGE 'UPDATE 실패' TYPE 'E'.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM delete_data USING lt_select_data TYPE LVC_T_ROW
+                       ls_select_data TYPE LVC_S_ROW.
+  CLEAR gs_data.
+  LOOP AT lt_select_data INTO ls_select_data.
+    READ TABLE gt_data INTO gs_data INDEX ls_select_data-index.
+    DELETE ZTMYCARRIER_B03 FROM gs_data.
+  ENDLOOP.
+  IF sy-subrc = 0.
+    PERFORM set_data.
+  ELSE.
+    MESSAGE 'DELETE 실패' TYPE 'E'.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_data .
+  SELECT * FROM ZTMYCARRIER_B03
+    INTO TABLE gt_data.
+  SORT gt_data BY carrid.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM refresh_data .
+  CALL METHOD go_alv->refresh_table_display
+    EXCEPTIONS
+      finished       = 1
+      others         = 2.
+ENDFORM.
+```
+</br>
+
+**4) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_B03_O01
+*&---------------------------------------------------------------------*
+
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE init_alv OUTPUT.
+  IF go_docking IS INITIAL.
+    CREATE OBJECT go_docking
+      EXPORTING
+        side      = cl_gui_docking_container=>dock_at_bottom
+        extension = 200
+        repid     = sy-repid
+        dynnr     = sy-dynnr.
+
+    CREATE OBJECT go_alv EXPORTING i_parent = go_docking.
+
+    gs_layout-sel_mode = 'A'.
+    SET HANDLER lcl_event_handler=>on_toolbar FOR go_alv.
+    SET HANDLER lcl_event_handler=>on_user_command FOR go_alv.
+    SET HANDLER lcl_event_handler=>on_double_click FOR go_alv.
+
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'ZTMYCARRIER_B03'
+        is_layout                     = gs_layout
+      CHANGING
+        it_outtab                     = gt_data
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+
+ENDMODULE.
+```
+</br>
+
+**5) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_B03_I01
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
 </br>
 </br>
 
