Update 3-1. 프로그래밍 DB 활용 개발(01.07).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -16,6 +16,7 @@
 </br>
 
 - 문제
+- ALV에 DB 테이블 데이터 삽입, 수정, 삭제 실습
 <img width="357" height="426" alt="image" src="https://github.com/user-attachments/assets/74c4ba9f-a621-4675-9072-30952ea8c91b" />
 </br>
 </br>
