Update 3-1. 프로그래밍 DB 활용 개발(01.07).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -324,5 +324,5 @@ ENDMODULE.
 </br>
 
 - 문제
-
+- 티코드로 프로그램 이동 실습
 <img width="534" height="244" alt="image" src="https://github.com/user-attachments/assets/b3fe975d-1d3a-4a66-af5a-f1ff20ae632b" />
