Update 3-1. 프로그래밍 DB 활용 개발(01.07).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -326,3 +326,112 @@ ENDMODULE.
 - 문제
 - 티코드로 프로그램 이동 실습
 <img width="534" height="244" alt="image" src="https://github.com/user-attachments/assets/b3fe975d-1d3a-4a66-af5a-f1ff20ae632b" />
+</br>
+</br>
+</br>
+
+**1) Report program 코드 생성**
+```abap
+REPORT ZBC400_PRACTICE1_CALLED_B03.
+
+INCLUDE ZBC400_PRACTICE1_CALLED_TOP.
+INCLUDE ZBC400_PRACTICE1_CALLED_O01.
+INCLUDE ZBC400_PRACTICE1_CALLED_I01.
+
+START-OF-SELECTION.
+  CALL SCREEN 100.
+```
+</br>
+
+**2) `TOP` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_CALLED_TOP
+*&---------------------------------------------------------------------*
+
+DATA: OK_CODE TYPE sy-ucomm.
+DATA: ZREADSFLIGHT_B03 TYPE TABLE OF sflight.
+
+PARAMETERS: pa_car TYPE sflight-carrid,
+            pa_con TYPE sflight-connid.
+
+GET PARAMETER ID 'CARID' FIELD pa_car.
+GET PARAMETER ID 'CONID' FIELD pa_con.
+
+DATA: go_docking TYPE REF TO cl_gui_docking_container,
+      go_alv TYPE REF TO cl_gui_alv_grid.
+```
+</br>
+
+**3) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_CALLED_O01
+*&---------------------------------------------------------------------*
+
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE init_alv OUTPUT.
+  IF go_docking IS INITIAL.
+    SELECT * FROM sflight
+      INTO TABLE ZREADSFLIGHT_B03
+      WHERE carrid = pa_car
+        AND connid = pa_con.
+
+    CREATE OBJECT go_docking
+      EXPORTING
+        side      = cl_gui_docking_container=>dock_at_bottom
+        extension = 300
+        repid     = sy-repid
+        dynnr     = sy-dynnr.
+    CREATE OBJECT go_alv EXPORTING i_parent = go_docking.
+
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = ZREADSFLIGHT_B03
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+
+**4) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_CALLED_I01
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
