Update 3-1. 프로그래밍 DB 활용 개발(01.07).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -64,7 +64,7 @@ SELECTION-SCREEN END OF SCREEN 110.
 ```
 </br>
 
-**2) `C01` 모듈 생성**
+**3) `C01` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          ZBC400_PRACTICE1_B03_C01
@@ -154,7 +154,7 @@ ENDCLASS.
 ```
 </br>
 
-**3) `F01` 모듈 생성**
+**4) `F01` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          ZBC400_PRACTICE1_B03_F01
@@ -241,7 +241,7 @@ ENDFORM.
 ```
 </br>
 
-**4) `PBO` 모듈 생성**
+**5) `PBO` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          ZBC400_PRACTICE1_B03_O01
@@ -290,7 +290,7 @@ ENDMODULE.
 ```
 </br>
 
-**5) `PAI` 모듈 생성**
+**6) `PAI` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          ZBC400_PRACTICE1_B03_I01
@@ -316,6 +316,13 @@ MODULE exit INPUT.
   ENDCASE.
 ENDMODULE.
 ```
+</br>
+
+**7) 결과 확인**
+
+<img width="615" height="242" alt="image" src="https://github.com/user-attachments/assets/4d0dbe27-5a9e-4a8d-8ba4-403b8b18041f" />
+</br>
+</br>
 </br>
 </br>
 </br>
