Update 3-1. 프로그래밍 DB 활용 개발(01.07).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -443,3 +443,9 @@ MODULE exit INPUT.
   ENDCASE.
 ENDMODULE.
 ```
+</br>
+
+**5) 결과 확인**
+
+<img width="690" height="281" alt="image" src="https://github.com/user-attachments/assets/9bde7d50-2da6-4698-b117-8cdd08c60e7c" />
+
