Update 2-3. 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -87,7 +87,7 @@ DATA: <ref_var> TYPE REF TO <class_name>.
 - `CL_GUI_CUSTOM_CONTAINER` : Screen의 Area와 연결되는 컨테이너
 - `CL_GUI_ALV_GRID` : Container 안에서 데이터를 표시하는 ALV Grid 객체
 ```abap
-*************** TOP ****************
+*************** TOP ****************                   " REPORT ZPROGB03_0028.
 DATA: go_cont TYPE REF TO CL_GUI_CUSTOM_CONTAINER,     " Container 참조변수 생성 (아직 객체 생성되기 전)
       go_alv TYPE REF TO CL_GUI_ALV_GRID.              " ALV 참조변수 생성 (아직 객체 생성되기 전)
 ```
