Update 2-3. 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -111,6 +111,8 @@ ENDIF.
 - `container_name` → Screen의 Area와 연결
 - `i_parent` → ALV ↔ Container 연결
 ```abap
+REPORT ZPROGB03_0028.
+
 *************** PBO ****************
 MODULE init_alv OUTPUT.
   " 1. SCREEN에 Custom Area 추가
