Update 2-3. 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -172,6 +172,8 @@ ENDFORM.
 - `->FREE()` : 객체가 사용하는 GUI 컨트롤 자원 해제
 - `FREE ref` : 참조 변수만 해제(값 INITIAL로 초기화)
 ```abap
+REPORT ZPROGB03_0028.
+
 *************** PAI ****************
 MODULE exit INPUT.
   CASE OK_CODE.
