Update 2-3. 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -220,6 +220,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
 - `SET_TABLE_FOR_FIRST_DISPLAY` : 내부 테이블 데이터를 ALV Grid에 최초로 표시하는 메서드
 - SET_TABLE* 하고 f4 누르면 자동완성
 ```abap
+REPORT ZPROGB03_0028.
+
 *************** PBO ****************
 " 4. ALV Grid 안에 Data Display
 CALL METHOD go_alv->set_table_for_first_display
