Update 2-3. 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -264,24 +264,17 @@ ls_stable-col = 'X'. " 열 위치 유지
 ```
 - `REFRESH_TABLE_DISPLAY` : 내부 테이블 변경 내용을 ALV Grid에 다시 표시(갱신)하는 메서드
 ```abap
-*************** TOP ****************
-DATA gs_stable TYPE LVC_S_STBL.
+REPORT ZPROGB03_0028.
 
 *************** PBO ****************
-IF go_cont IS INITIAL.
-    " 생략
+IF go_cont IS INITIAL. " 최초 1번만 실행
+   " ALV 생성 로직
 ELSE.
-  gs_stable-row = 'X'.
-  gs_stable-col = 'X'.
-
-  CALL METHOD go_alv->refresh_table_display
-    EXPORTING
-      is_stable      = gs_stable
-      i_soft_refresh = ''  " X : 정렬, 필터, 그외 기능들 유지
-      " _ : 전체 리프레쉬 (기본)
-    EXCEPTIONS
-      finished       = 1
-      OTHERS         = 2.
+   " 최초에 1번 생성된 후, 두번째부터는 ELSE구문을 실행한다
+   CALL METHOD go_alv->refresh_table_display
+     EXCEPTIONS
+       finished       = 1
+       others         = 2.
 ENDIF.
 ```
 </br>
