--- a/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
@@ -25,12 +25,24 @@
 
 ### 1) ALV 데이터 갱신
 - 이미 생성된 ALV Grid가 있을 때 ALV를 다시 생성하지 않고 데이터만 화면에 반영
-- `LVC_S_STBL` : ALV 새로고침 시 화면 위치 고정용 구조
-- `row = 'X'` → 행(스크롤) 위치 유지
-- `col = 'X'` → 열(커서) 위치 유지
 </br>
 
 - `REFRESH_TABLE_DISPLAY` → ALV Grid 데이터를 다시 그리되 스크롤·선택 상태를 유지한 채 화면만 갱신하는 메서드
+- 보통 PBO에서 호출
+```abap
+CALL METHOD <alv_ref>->refresh_table_display
+  EXPORTING
+    is_stable = <ls_stable>.
+```
+- `LVC_S_STBL` 은 ALV 새로고침 시 스크롤·선택 위치가 초기화되지 않도록 화면을 고정하는 옵션
+- `row = 'X'` → 행(스크롤) 위치 유지
+- `col = 'X'` → 열(커서) 위치 유지
+```abap
+DATA ls_stable TYPE lvc_s_stbl.
+
+ls_stable-row = 'X'. " 행 위치 유지
+ls_stable-col = 'X'. " 열 위치 유지
+```
 - `i_soft_refresh` = 'X' : 정렬·필터·레이아웃을 유지한 채 데이터만 갱신
 - `i_soft_refresh` = space : ALV를 전체 재계산하여 정렬·필터까지 다시 적용
 ```abap
