--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -247,22 +247,7 @@ CALL METHOD go_alv->set_table_for_first_display
 
 **5) ALV 데이터 갱신**
 - `REFRESH_TABLE_DISPLAY`
-- 이미 생성된 ALV Grid가 있을 때 사용
-- ALV를 다시 만들지 않고 데이터만 화면에 반영
-- 보통 PBO에서 호출
-```abap
-CALL METHOD <alv_ref>->refresh_table_display
-  EXPORTING
-    is_stable = <ls_stable>.
-```
-- `LVC_S_STBL` 은 ALV 새로고침 시 스크롤·선택 위치가 초기화되지 않도록 화면을 고정하는 옵션
-```abap
-DATA ls_stable TYPE lvc_s_stbl.
-
-ls_stable-row = 'X'. " 행 위치 유지
-ls_stable-col = 'X'. " 열 위치 유지
-```
-- `REFRESH_TABLE_DISPLAY` : 내부 테이블 변경 내용을 ALV Grid에 다시 표시(갱신)하는 메서드
+- 이미 생성된 ALV Grid가 있을 때 ALV를 다시 만들지 않고 데이터만 화면에 반영
 ```abap
 REPORT ZPROGB03_0028.
 
