Update 2-3. 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -365,6 +365,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab  = <itab>.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** TOP ****************
 DATA: gs_variant TYPE disvariant,
       gv_save    TYPE c LENGTH 1.
@@ -398,6 +400,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab  = <itab>.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** TOP ****************
 DATA gv_variant TYPE disvariant.
 PARAMETERS pa_lv TYPE disvariant-variant.
@@ -422,6 +426,8 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 
 **1) `TOP` 모듈 수정**
 ```abap
+REPORT ZPROGB03_0029.
+
 DATA: gs_variant TYPE disvariant.
 
 INITIALIZATION.
@@ -436,6 +442,8 @@ INITIALIZATION.
 
 **2) `PBO` 의 `init_alv` 모듈 수정**
 ```abap
+REPORT ZPROGB03_0029.
+
 " 4. ALV Grid 안에 Data display
     CALL METHOD go_alv->set_table_for_first_display
       EXPORTING
