Update 2-4. 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
@@ -48,20 +48,23 @@ ls_stable-col = 'X'. " 열 위치 유지
 - `i_soft_refresh` = 'X' : 정렬·필터·레이아웃을 유지한 채 데이터만 갱신
 - `i_soft_refresh` = space : ALV를 전체 재계산하여 정렬·필터까지 다시 적용
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
-DATA ls_stable TYPE lvc_s_stbl.    
+DATA gs_stable TYPE LVC_S_STBL.   
 
 ********* PBO *********
-ls_stable-row = 'X'.   " 행(스크롤) 위치 유지
-ls_stable-col = 'X'.   " 열(커서) 위치 유지
+gs_stable-row = 'X'.
+gs_stable-col = 'X'.
 
 CALL METHOD go_alv->refresh_table_display
   EXPORTING
-    is_stable      = ls_stable
-    i_soft_refresh = 'X'   " 정렬·필터·레이아웃 유지
+    is_stable      = gs_stable
+    i_soft_refresh = ''  " X : 정렬, 필터, 그외 기능들 유지
+                         " _ : 전체 리프레쉬 (기본)
   EXCEPTIONS
     finished       = 1
-    others         = 2.
+    OTHERS         = 2.
 ```
 </br>
 </br>
